# smb_imu_interface

./: .gitignore  README.md
.github/workflows/: build_test.yml
firmware/libraries/versavis/: library.properties
firmware/libraries/versavis/src/: ADIS16448.cpp  ADIS16448.h  ADIS16448AMLZ.cpp  ADIS16448AMLZ.h  ADIS16448BMLZ.cpp  ADIS16448BMLZ.h  Imu.cpp  Imu.h  adis_configuration.h  versavis_configuration.h
firmware/versavis/: versavis.ino
versavis/: CMakeLists.txt
versavis/launch/: run_versavis_adis16448.launch  run_versavis_adis16448AMLZ.launch  run_versavis_mono.launch
versavis/msg/: MagMicro.msg
versavis/src/: versavis_imu_receiver.cpp
versavis_adis16448_receiver/: CMakeLists.txt  package.xml
versavis_adis16448_receiver/launch/: run_versavis_adis16448.launch
versavis_adis16448_receiver/src/: versavis_imu_receiver.cpp
