<?xml version="1.0"?>
<package format="2">
  <name>versavis_adis16448_receiver</name>
  <version>0.0.1</version>
  <description>The versavis ADIS16448 receiver package</description>
  <maintainer email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</maintainer>
  <license>closed</license>
  <url type="website">https://github.com/mantelt/versaIMU</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosserial_client</depend>
  <depend>rosserial_arduino</depend>
  <depend>rosserial_python</depend>
</package>
